hugo: Fix scroll issues for code-block
- Add lineos=table to example page
- Add styling to make table fit the code-block (highlight.scss)
- Move the border of the code-block from code-block__header & pre to
code-block itself because this works well with both normal code-block and
table-code-block. The previous styling made overlapping borders which in some
cases made the white of the table be on top of the code block border.
- Add border-right on the first td of a table inside the hightlight block so
we can have a line between line numbers & code. Previous version also had a
line but this line was actually caused by a bug with overlapping borders.

To test: /examples/basic/code-block/

For https://linear.app/usmedia/issue/CUE-286

Closes #406 as merged as of commit 1a8974c.

--- a/hugo/assets/scss/components/code-block.scss
+++ b/hugo/assets/scss/components/code-block.scss
@@ -7,6 +7,8 @@
 .code-block {
     $self: &;
 
+    border: 2px solid var(--pre-border-color, $c-grey-blue);
+    border-radius: $b-radius;
     display: flex;
     flex-direction: column;
     margin-bottom: 1.5rem;
@@ -19,11 +21,12 @@
         }
     }
 
+    pre {
+        border: 0;
+    }
+
     &__heading {
         background-color: $c-grey-blue--lighter;
-        border: 2px solid var(--pre-border-color, $c-grey-blue);
-        border-bottom: 0;
-        border-radius: $b-radius $b-radius 0 0;
         color: $c-blue--darker;
         flex: 0 0 35px;
     }
@@ -133,8 +136,6 @@
 
     &--heading {
         pre {
-            border-radius: 0 0 $b-radius $b-radius;
-            border-top: 0;
             padding-top: 0.5rem;
         }
     }
